--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "whatsapp-backend",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "index.js",
   "type": "module",
+  "engines": {
+    "node" : "14.x"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "nodemon index.js"
   },
   "author": "Rajeswaran",
   "license": "ISC",
